--- a/app/page.module.css
+++ b/app/page.module.css
@@ -301,7 +301,7 @@
   width: 100%;
   height: 200px;
   margin-bottom: 0.5rem;
-  object-fit: cover;
+  object-fit: contain;
   border: 1px solid #33ff33;
 }
 
